# pixelator

./: .gitignore  CMakeLists.txt  README.md
source/: clustering.cpp  io.cpp  pixeling.cpp  tests.cpp
